fixed button styling

--- a/css/style3.css
+++ b/css/style3.css
@@ -107,6 +107,13 @@ body{
 	cursor: pointer;
 }
 
+button{
+	border:none;
+	outline:none;
+	background:none;
+}
+
+
 /*MODALS*/
 /*From w3schools*/
 
