--- a/css/style1.css
+++ b/css/style1.css
@@ -30,6 +30,7 @@ body{
 	padding-left: 10%;
 	padding-right: 10%;
 	padding-bottom: 10%;
+	padding-top: 10%;
 }
 
 /*SIDEBAR*/
@@ -82,6 +83,7 @@ body{
 	padding-bottom: 40px;
 	padding-left: 60px;
 	position:fixed;
+	top: 0px;
 }
 
 .hamburger{
